--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div class="container">
         <div class="clock">
+
+            <div style="--color:black;" class="hand"><i></i></div>
+            <div style="--color:green;" class="hand"><i></i></div>
+            <div style="--color:blue;" class="hand"><i></i></div>
+
             <span style="--i:1"><t>1</t></span> 
             <span style="--i:2"><t>2</t></span>
             <span style="--i:3"><t>3</t></span>
