main.js file modified along with other two

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
         <div class="clock">
 
-            <div style="--color:black;" class="hand"><i></i></div>
-            <div style="--color:green;" class="hand"><i></i></div>
-            <div style="--color:blue;" class="hand"><i></i></div>
+            <div style="--color:black; --height:75px"  id="hour"class="hand"><i></i></div>
+            <div style="--color:green; --height:95px"  id="minute"class="hand"><i></i></div>
+            <div style="--color:blue; --height:105px"  height:75px id="second" class="hand"><i></i></div>
 
             <span style="--i:1"><t>1</t></span> 
             <span style="--i:2"><t>2</t></span>
